# axosyslog-cfg-helper

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  terminalizer.yml  update_axosyslog_version.sh
.github/workflows/: CI.yml  axosyslog-version-check.yml  release.yml
axosyslog_cfg_helper/: _axosyslog_version.py  build_db.py  console.py  generate_diff.py  globals.py
axosyslog_cfg_helper/driver_db/: exceptions.py  option.py
axosyslog_cfg_helper/module_loader/: __init__.py  load_modules.py  load_scl.py  parse_sentence.py
syslog_ng_cfg_helper/: build_db.py  console.py  generate_diff.py  globals.py
syslog_ng_cfg_helper/driver_db/: __init__.py  block.py  driver.py  driver_db.py  option.py  utils.py
syslog_ng_cfg_helper/module_loader/: load_modules.py  parse_sentence.py
tests/driver_db/: test_block.py  test_driver.py  test_driver_db.py  test_option.py
tests/module_loader/: test_load_scl.py  test_parse_sentence.py
