[tool.poetry]
name = "axosyslog-cfg-helper"
version = "1.10.3"
description = "Configuration helper for axosyslog."
authors = ["Attila Szakacs <szakacs.attila96@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/alltilla/axosyslog-cfg-helper"
repository = "https://github.com/alltilla/axosyslog-cfg-helper"
keywords = ["axosyslog", "configuration", "cfg"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "axosyslog_cfg_helper"}]
include = [
    "LICENSE",
    "axosyslog_cfg_helper/axosyslog-cfg-helper.db",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
neologism = "^0.0.8"
pytest = "^7.2.1"
mypy = "^1.0.1"
black = "^23.3.0"
pylint = "^2.17.4"
pycodestyle = "^2.10.0"

pyright = "^1.1.371"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = "tests/module_loader/test_parse_driver.py"

[tool.poetry.scripts]
axosyslog-cfg-helper = 'axosyslog_cfg_helper.console:run'
