[tool.poetry]
name = "axosyslog-cfg-helper"
version = "1.18.0"
description = "Configuration helper for axosyslog."
authors = ["Attila Szakacs <szakacs.attila96@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/alltilla/axosyslog-cfg-helper"
repository = "https://github.com/alltilla/axosyslog-cfg-helper"
keywords = ["axosyslog", "configuration", "cfg"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
packages = [{include = "axosyslog_cfg_helper"}]
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "axosyslog_cfg_helper/axosyslog-cfg-helper.db", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
neologism = "*"
pytest = "*"
mypy = "*"
black = "*"
pylint = "*"
pycodestyle = "*"

pyright = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = "tests/module_loader/test_parse_driver.py"

[tool.poetry.scripts]
axosyslog-cfg-helper = 'axosyslog_cfg_helper.console:run'
